--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -1,6 +1,10 @@
 apiVersion: v1
 kind: Pod
 spec:
+  securityContext:
+    runAsUser: 1000
+    runAsGroup: 1000
+    fsGroup: 1000
   containers:  # list of containers that you want present for your build, you can define a default container in the Jenkinsfile
     - name: maven
       image: maven:3.5.4-jdk-8-slim
@@ -12,14 +16,15 @@ spec:
           cpu: "500m"
         limits:
           memory: "1Gi"
-    - name: docker
-      image: docker:18.06.1
-      command: ["tail", "-f", "/dev/null"]
-      imagePullPolicy: Always
-      volumeMounts:
-        - name: docker
-          mountPath: /var/run/docker.sock # We use the k8s host docker engine
-  volumes:
-    - name: docker
-      hostPath:
-        path: /var/run/docker.sock
+#This would try to run as privileged
+#    - name: docker
+#      image: docker:18.06.1
+#      command: ["tail", "-f", "/dev/null"]
+#      imagePullPolicy: Always
+#      volumeMounts:
+#        - name: docker
+#          mountPath: /var/run/docker.sock # We use the k8s host docker engine
+#  volumes:
+#    - name: docker
+#      hostPath:
+#        path: /var/run/docker.sock
